test_regress/t/t_assoc_method.out
%Error: t/t_assoc_method.v:31:14: Unknown built-in associative array method 'unique'
                                : ... In instance t
   31 |       qv = q.unique;
      |              ^~~~~~
%Error: t/t_assoc_method.v:33:15: Unknown built-in associative array method 'unique'
                                : ... In instance t
   33 |       qv = qe.unique;
      |               ^~~~~~
%Error: t/t_assoc_method.v:35:14: Unknown built-in associative array method 'unique_index'
                                : ... In instance t
   35 |       qi = q.unique_index; qi.sort;
      |              ^~~~~~~~~~~~
%Error-UNSUPPORTED: t/t_assoc_method.v:35:31: Unsupported/unknown built-in queue method 'sort'
                                            : ... In instance t
   35 |       qi = q.unique_index; qi.sort;
      |                               ^~~~
%Error: t/t_assoc_method.v:37:15: Unknown built-in associative array method 'unique_index'
                                : ... In instance t
   37 |       qv = qe.unique_index;
      |               ^~~~~~~~~~~~
%Error: t/t_assoc_method.v:42:14: Unknown built-in associative array method 'find'
                                : ... In instance t
   42 |       qv = q.find with (item == 2);
      |              ^~~~
%Error: t/t_assoc_method.v:44:14: Unknown built-in associative array method 'find_first'
                                : ... In instance t
   44 |       qv = q.find_first with (item == 2);
      |              ^~~~~~~~~~
%Error: t/t_assoc_method.v:46:14: Unknown built-in associative array method 'find_last'
                                : ... In instance t
   46 |       qv = q.find_last with (item == 2);
      |              ^~~~~~~~~
%Error: t/t_assoc_method.v:49:14: Unknown built-in associative array method 'find'
                                : ... In instance t
   49 |       qv = q.find with (item == 20);
      |              ^~~~
%Error: t/t_assoc_method.v:51:14: Unknown built-in associative array method 'find_first'
                                : ... In instance t
   51 |       qv = q.find_first with (item == 20);
      |              ^~~~~~~~~~
%Error: t/t_assoc_method.v:53:14: Unknown built-in associative array method 'find_last'
                                : ... In instance t
   53 |       qv = q.find_last with (item == 20);
      |              ^~~~~~~~~
%Error: t/t_assoc_method.v:56:14: Unknown built-in associative array method 'find_index'
                                : ... In instance t
   56 |       qi = q.find_index with (item == 2); qi.sort;
      |              ^~~~~~~~~~
%Error-UNSUPPORTED: t/t_assoc_method.v:56:46: Unsupported/unknown built-in queue method 'sort'
                                            : ... In instance t
   56 |       qi = q.find_index with (item == 2); qi.sort;
      |                                              ^~~~
%Error: t/t_assoc_method.v:58:14: Unknown built-in associative array method 'find_first_index'
                                : ... In instance t
   58 |       qi = q.find_first_index with (item == 2);
      |              ^~~~~~~~~~~~~~~~
%Error: t/t_assoc_method.v:60:14: Unknown built-in associative array method 'find_last_index'
                                : ... In instance t
   60 |       qi = q.find_last_index with (item == 2);
      |              ^~~~~~~~~~~~~~~
%Error: t/t_assoc_method.v:63:14: Unknown built-in associative array method 'find_index'
                                : ... In instance t
   63 |       qi = q.find_index with (item == 20); qi.sort;
      |              ^~~~~~~~~~
%Error-UNSUPPORTED: t/t_assoc_method.v:63:47: Unsupported/unknown built-in queue method 'sort'
                                            : ... In instance t
   63 |       qi = q.find_index with (item == 20); qi.sort;
      |                                               ^~~~
%Error: t/t_assoc_method.v:65:14: Unknown built-in associative array method 'find_first_index'
                                : ... In instance t
   65 |       qi = q.find_first_index with (item == 20);
      |              ^~~~~~~~~~~~~~~~
%Error: t/t_assoc_method.v:67:14: Unknown built-in associative array method 'find_last_index'
                                : ... In instance t
   67 |       qi = q.find_last_index with (item == 20);
      |              ^~~~~~~~~~~~~~~
%Error: t/t_assoc_method.v:70:14: Unknown built-in associative array method 'min'
                                : ... In instance t
   70 |       qv = q.min;
      |              ^~~
%Error: t/t_assoc_method.v:72:14: Unknown built-in associative array method 'max'
                                : ... In instance t
   72 |       qv = q.max;
      |              ^~~
%Error: t/t_assoc_method.v:75:15: Unknown built-in associative array method 'min'
                                : ... In instance t
   75 |       qv = qe.min;
      |               ^~~
%Error: t/t_assoc_method.v:77:15: Unknown built-in associative array method 'max'
                                : ... In instance t
   77 |       qv = qe.max;
      |               ^~~
%Error: t/t_assoc_method.v:82:13: Unknown built-in associative array method 'sum'
                                : ... In instance t
   82 |       i = q.sum; do if ((i) !== (32'hc)) begin $write("%%Error: %s:%0d:  got='h%x exp='h%x\n", "t/t_assoc_method.v",82, (i), (32'hc)); $stop; end while(0);;
      |             ^~~
%Error: t/t_assoc_method.v:83:13: Unknown built-in associative array method 'sum'
                                : ... In instance t
   83 |       i = q.sum with (item + 1); do if ((i) !== (32'h11)) begin $write("%%Error: %s:%0d:  got='h%x exp='h%x\n", "t/t_assoc_method.v",83, (i), (32'h11)); $stop; end while(0);;
      |             ^~~
%Error: t/t_assoc_method.v:84:13: Unknown built-in associative array method 'product'
                                : ... In instance t
   84 |       i = q.product; do if ((i) !== (32'h30)) begin $write("%%Error: %s:%0d:  got='h%x exp='h%x\n", "t/t_assoc_method.v",84, (i), (32'h30)); $stop; end while(0);;
      |             ^~~~~~~
%Error: t/t_assoc_method.v:85:13: Unknown built-in associative array method 'product'
                                : ... In instance t
   85 |       i = q.product with (item + 1); do if ((i) !== (32'h168)) begin $write("%%Error: %s:%0d:  got='h%x exp='h%x\n", "t/t_assoc_method.v",85, (i), (32'h168)); $stop; end while(0);;
      |             ^~~~~~~
%Error: t/t_assoc_method.v:87:14: Unknown built-in associative array method 'sum'
                                : ... In instance t
   87 |       i = qe.sum; do if ((i) !== (32'h0)) begin $write("%%Error: %s:%0d:  got='h%x exp='h%x\n", "t/t_assoc_method.v",87, (i), (32'h0)); $stop; end while(0);;
      |              ^~~
%Error: t/t_assoc_method.v:88:14: Unknown built-in associative array method 'product'
                                : ... In instance t
   88 |       i = qe.product; do if ((i) !== (32'h0)) begin $write("%%Error: %s:%0d:  got='h%x exp='h%x\n", "t/t_assoc_method.v",88, (i), (32'h0)); $stop; end while(0);;
      |              ^~~~~~~
%Error: t/t_assoc_method.v:91:13: Unknown built-in associative array method 'and'
                                : ... In instance t
   91 |       i = q.and; do if ((i) !== (32'b1000)) begin $write("%%Error: %s:%0d:  got='h%x exp='h%x\n", "t/t_assoc_method.v",91, (i), (32'b1000)); $stop; end while(0);;
      |             ^~~
%Error: t/t_assoc_method.v:92:13: Unknown built-in associative array method 'and'
                                : ... In instance t
   92 |       i = q.and with (item + 1); do if ((i) !== (32'b1001)) begin $write("%%Error: %s:%0d:  got='h%x exp='h%x\n", "t/t_assoc_method.v",92, (i), (32'b1001)); $stop; end while(0);;
      |             ^~~
%Error: t/t_assoc_method.v:93:13: Unknown built-in associative array method 'or'
                                : ... In instance t
   93 |       i = q.or; do if ((i) !== (32'b1110)) begin $write("%%Error: %s:%0d:  got='h%x exp='h%x\n", "t/t_assoc_method.v",93, (i), (32'b1110)); $stop; end while(0);;
      |             ^~
%Error: t/t_assoc_method.v:94:13: Unknown built-in associative array method 'or'
                                : ... In instance t
   94 |       i = q.or with (item + 1); do if ((i) !== (32'b1111)) begin $write("%%Error: %s:%0d:  got='h%x exp='h%x\n", "t/t_assoc_method.v",94, (i), (32'b1111)); $stop; end while(0);;
      |             ^~
%Error: t/t_assoc_method.v:95:13: Unknown built-in associative array method 'xor'
                                : ... In instance t
   95 |       i = q.xor; do if ((i) !== (32'b0110)) begin $write("%%Error: %s:%0d:  got='h%x exp='h%x\n", "t/t_assoc_method.v",95, (i), (32'b0110)); $stop; end while(0);;
      |             ^~~
%Error: t/t_assoc_method.v:96:13: Unknown built-in associative array method 'xor'
                                : ... In instance t
   96 |       i = q.xor with (item + 1); do if ((i) !== (32'b0110)) begin $write("%%Error: %s:%0d:  got='h%x exp='h%x\n", "t/t_assoc_method.v",96, (i), (32'b0110)); $stop; end while(0);;
      |             ^~~
%Error: t/t_assoc_method.v:98:14: Unknown built-in associative array method 'and'
                                : ... In instance t
   98 |       i = qe.and; do if ((i) !== (32'b0)) begin $write("%%Error: %s:%0d:  got='h%x exp='h%x\n", "t/t_assoc_method.v",98, (i), (32'b0)); $stop; end while(0);;
      |              ^~~
%Error: t/t_assoc_method.v:99:14: Unknown built-in associative array method 'or'
                                : ... In instance t
   99 |       i = qe.or; do if ((i) !== (32'b0)) begin $write("%%Error: %s:%0d:  got='h%x exp='h%x\n", "t/t_assoc_method.v",99, (i), (32'b0)); $stop; end while(0);;
      |              ^~
%Error: t/t_assoc_method.v:100:14: Unknown built-in associative array method 'xor'
                                 : ... In instance t
  100 |       i = qe.xor; do if ((i) !== (32'b0)) begin $write("%%Error: %s:%0d:  got='h%x exp='h%x\n", "t/t_assoc_method.v",100, (i), (32'b0)); $stop; end while(0);;
      |              ^~~
%Error: Exiting due to
